--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/cochsen/todo-api#readme",
   "dependencies": {
+    "body-parser": "^1.13.3",
     "express": "^4.13.3"
   }
 }
